--- a/templates/index.html
+++ b/templates/index.html
@@ -26,6 +26,11 @@
           <span id="gain_val"></span>
         </div>
         <div class="control">
+          <label for="brightness">Brightness (can be negative)</label>
+          <input type="range" id="brightness" min="-128" max="128" step="1" />
+          <span id="brightness_val"></span>
+        </div>
+        <div class="control">
           <label for="exposure_auto">Exposure Auto</label>
           <select id="exposure_auto">
             <option value="1">Manual</option>
