--- a/templates/index.html
+++ b/templates/index.html
@@ -31,6 +31,11 @@
           <span id="brightness_val"></span>
         </div>
         <div class="control">
+          <label for="exposure">OpenCV Exposure (allows negative)</label>
+          <input type="number" id="exposure" min="-13" max="13" step="1" value="0" />
+          <small>Note: Availability depends on driver; negative values may map to shorter exposure in log scale.</small>
+        </div>
+        <div class="control">
           <label for="exposure_auto">Exposure Auto</label>
           <select id="exposure_auto">
             <option value="1">Manual</option>
